--- a/index.html
+++ b/index.html
@@ -104,20 +104,30 @@
             Work Experience <span style="color: fc5c65;">:</span>
         </div>
         <div class="work-heading scroll-delay-1">
-            Cactus Labs <span class="work-sub">(May,2022 - Present)</span>
+            Sterling Oil Exploration and Energy Production Company <span class="work-sub">(July,2020 - Present)</span>
         </div>
         <div class="work-info scroll-delay-1">
-                Worked on Aspose API for section tagging in research paper, API to classify different types of document like research papers, articles, response to reviwer comments.
+	Maintenance planning through Computerized Maintenance Management System (MAPCON & Epicor) 
+	Processes Work requests, work orders, and Facility Status Reporting
+	Facilitates implementation of asset management system requirements,
+	Processes, recommends and guides best practices in the Management of Change (MOC).
+	Performs Maintenance Execution (PME) and supply chain.
+	Drives material master data change requests and provides technical inputs for material procurement.
+	Drives continuous improvement in the maintenance work planning, preparation, and execution space for routine preventive and corrective job work Orders.
         </div>
         <div class="work-heading scroll-delay-1">
-            Wellowise <span class="work-sub">(October,2019 - April,2022)</span>
+            Mainlogix Limited (A home automation Startup Company <span class="work-sub">(July 2019 - April,2022)</span>
         </div>
         <div class="work-info scroll-delay-1">
-            Worked on frontend angular app for admin role, flask APIs for variour services, Data Scraping with Beautiful Soup, Gateway API with JWT Authentication.
+	Systems Engineer, Mainlogix Limited (A home automation Startup Company
+	Initiated research on choice of equipment communication protocol with the choice being Zigbee
+	Supported the product design up to MVP
+	Cross functioned with other department to deliver on the product
+	Scheduled and attended meetings with third party support staff
         </div>
 
         <div class="work-heading scroll-delay-2 pt-3">
-            mywanderlust.in <span class="work-sub">(May,2019 - June,2019)</span>
+            Automation and Engineering Academy <span class="work-sub">(May,2019 - June,2019)</span>
         </div>
         <div class="work-info scroll-delay-2 mb-md-5">
             Worked on redesigning the experience page, automated certificate distribution system for people who have completed the trek, analytics to study conversion ratio of different ads.
